# led_effects

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: chaser.rs  lib.rs  sequence.rs  time.rs
src/chaser/: loop_chaser.rs  offset_progression.rs  rainbow_chaser.rs  random_unicolor.rs  unicolor_transition.rs
src/sequence/: duplicate.rs  gradient.rs  pattern.rs  rainbow.rs  symmetry.rs  unicolor.rs
