[package]
name = "led_effects"
version = "0.2.0-dev"
license = "GPL-3.0-only"
authors = [
    "Guillaume Cugnet <guillaume.cugnet@gmail.com>",
    "Jean-Philippe Cugnet <jean-philippe@cugnet.eu>",
]
edition = "2021"
description = "A collection of LED effects on top of smart-leds."

[dependencies]
embedded-time = "0.12.0"

[dependencies.smart-leds]
git = "https://github.com/legrec14/smart-leds.git"
branch = "hsv-conversions"

[dependencies.rand]
version = "0.8.4"
default-features = false
features = ["small_rng"]
optional = true
